회귀분석 내용 추가

--- a/Bigdata-cert/type3/02.categorical-data-analysis.md
+++ b/Bigdata-cert/type3/02.categorical-data-analysis.md
@@ -6,8 +6,8 @@
 - 관찰도수와 기대도수의 차이
 - 빈도(count)로 변경 (관찰값, 기대값)
 - scipy.stats.chisquare(observed, expected)
-    - observed: 관찰된 빈도 리스트
-    - expected: 기대 빈도 리스트
+    - observed: 관찰된 ***빈도*** 리스트
+    - expected: 기대 ***빈도*** 리스트
 
 ### 독립성 검정
 
