윈도우 함수 내용 정리

--- a/SQL/04-Etc2.md
+++ b/SQL/04-Etc2.md
@@ -179,3 +179,30 @@ select case when 컬럼1 is null then '값1' else 컬럼1 end as 컬럼1, case w
 from 테이블1 
 group by 컬럼1, 컬럼2 with rollup;
 ```
+
+# 6. `WINDOW FUNCTION`
+- 행과 행간의 관계를 쉽게 정의
+- 테이블 전체가 아닌 특정 부분에 대한 계산을 해줌 
+- `OVER`절 사용 
+- 기본집계함수, 순위결정함수 등이 포함됨 
+    - 기본집계함수: Etc1.md 참고
+    - 순위결정함수
+        - `row number`: 동일 값 있더라도 모두 다른 순위로 반환(ex. 1,2,3,4)
+        - `rank`: 동일 값을 같은 순위로, 다음 순위는 그 수만큼 건너뛰기 (ex. 1,2,2,4)
+        - `dense rank`: 동일 값을 같은 순위로, 건너뛰지 않음 (ex. 1,2,2,3)
+- 사용 예시 
+```sql
+-- 기본 형태
+윈도우함수 OVER (partition by 컬럼명, order by 컬럼명)
+
+-- 집계함수 사용
+select 컬럼1, count(*) over (partition by 컬럼1) as 별칭1 from 테이블1;
+
+-- 순위 
+select 컬럼1, 컬럼2, 컬럼3, 컬럼4
+        row_number() over (partition by 컬럼2 order by 컬럼3 desc) as 별칭1,
+        rank() over (partition by 컬럼2 order by 컬럼3 desc) as 별칭2,
+        dense_rank() over (partition by 컬럼2 order by 컬럼3 desc) as 별칭3
+from 테이블1
+order by 컬럼2
+```
