date functions 내용정리

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -119,3 +119,46 @@ select sign(값) from 테이블;
 ```sql
 select mod(값1, 값2) from 테이블;
 ``` 
+
+# 3. `DATE FUNCTIONS`
+- 날짜와 관련된 데이터를 다루기 위한 함수
+
+## 3-1. NOW
+- ***쿼리가 수행되는*** 시점을 반환
+```sql
+select now() from 테이블;
+```
+## 3-2. SYSDATE
+- 쿼리 중에서 ***해당함수가 수행되는*** 시점을 반환
+```sql
+select sysdate() from 테이블;
+```
+
+## 3-3. CURRENT_DATE
+- 현재 날짜를 반환 
+```sql
+select current_date() from 테이블;
+```
+
+## 3-4. ADDDATE
+- adddate(a, b): a에서 b일 만큼 더한 날짜 반환 
+```sql
+select adddate(값1, 값2) from 테이블;
+```
+
+## 3-5. LAST_DAY
+- 입력한 날짜가 포함된 달의 마지막 일을 반환 
+```sql
+select last_day() from 테이블;
+```
+
+## 3-6. YEAR/MONTH/DAY
+- 입력한 날짜의 연/월/일 반환 
+```sql
+select year() from 테이블;
+
+select month() from 테이블;
+
+select day() from 테이블;
+```
+
