null function 내용정리

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -123,36 +123,36 @@ select mod(값1, 값2) from 테이블;
 # 3. `DATE FUNCTIONS`
 - 날짜와 관련된 데이터를 다루기 위한 함수
 
-## 3-1. NOW
+## 3-1. `NOW`
 - ***쿼리가 수행되는*** 시점을 반환
 ```sql
 select now() from 테이블;
 ```
-## 3-2. SYSDATE
+## 3-2. `SYSDATE`
 - 쿼리 중에서 ***해당함수가 수행되는*** 시점을 반환
 ```sql
 select sysdate() from 테이블;
 ```
 
-## 3-3. CURRENT_DATE
+## 3-3. `CURRENT_DATE`
 - 현재 날짜를 반환 
 ```sql
 select current_date() from 테이블;
 ```
 
-## 3-4. ADDDATE
+## 3-4. `ADDDATE`
 - adddate(a, b): a에서 b일 만큼 더한 날짜 반환 
 ```sql
 select adddate(값1, 값2) from 테이블;
 ```
 
-## 3-5. LAST_DAY
+## 3-5. `LAST_DAY`
 - 입력한 날짜가 포함된 달의 마지막 일을 반환 
 ```sql
 select last_day() from 테이블;
 ```
 
-## 3-6. YEAR/MONTH/DAY
+## 3-6. `YEAR/MONTH/DAY`
 - 입력한 날짜의 연/월/일 반환 
 ```sql
 select year() from 테이블;
@@ -162,3 +162,30 @@ select month() from 테이블;
 select day() from 테이블;
 ```
 
+# 4. `NULL FUNCTIONS`
+- null값을 다루기 위한 함수
+
+## 4-1. IFNULL
+- `ifnull(a,b)`: a가 null일 때 b 반환
+```sql
+select ifnull(a, b) from 테이블;
+```
+
+## 4-2. COALESCE
+- `coalesce(a,b,c)`: a,b,c 중에서 null이 아닌 최초값 반환
+```sql
+select coalesce(a, b, c) from 테이블;
+```
+
+## 4-3. NULLIF
+- `nullif(a,b)`: a,b가 같다면 null, 다르면 a 반환 
+```sql
+select nullif(a, b) from 테이블;
+```
+
+## 4-4. ISNULL
+- 입력한 값의 null 여부를 확인 
+- null이면 true를 의미하는 1, null이 아니면 false를 의미하는 0 반환
+```sql
+select isnull(a) from 테이블;
+``` 
