date_add, date_sub 추가

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -142,6 +142,8 @@ select current_date() from 테이블;
 
 ## 3-4. `ADDDATE`
 - adddate(a, b): a에서 b일 만큼 더한 날짜 반환 
+- date_add(a, interval b): a에서 b만큼 더함(초, 분, 시, 일, 월, 년 가능)
+- date_sub (a, interval b): a에서 b만큼 뺌(초, 분, 시, 일, 월, 년 가능)
 ```sql
 select adddate(값1, 값2) from 테이블;
 ```
