--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -7,6 +7,7 @@ INDEX
     5. TRIM
     6. REPLACE
     7. LPAD/RPAD
+    8. FIND_IN_SET
 2. NUMBER FUNCTIONS
     1. ROUND
     2. FLOOR
@@ -76,6 +77,13 @@ select lpad(문자열, 길이, 문자) from 테이블;
 
 select rpad(문자열, 길이, 문자) from 테이블;
 ``` 
+
+## 1-8. `FIND_IN_SET`
+- 콤마로 연결된 문자열에서 특정 문자가 있는지 확인 
+- 문자가 있으면 인덱스, 없으면 0 반환
+```sql
+select find_in_set('문자', '문자열');
+```
 
 # 2. `NUMBER FUNCTIONS`
 - 숫자를 다루기 위한 함수
