datediff, timestampdiff 추가

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -22,6 +22,8 @@ INDEX
     4. ADDDATE
     5. LAST_DAY
     6. YEAR/MONTH/DAY
+    7. DATEDIFF
+    8. TIMESTAMPDIFF
 4. NULL FUNCTIONS
     1. IFNULL
     2. COALESCE
@@ -170,6 +172,17 @@ select year() from 테이블;
 select month() from 테이블;
 
 select day() from 테이블;
+```
+## 3-7. `DATEDIFF`
+- 두 날짜간의 차이(일수) 계산
+```sql
+select datediff(날짜1, 날짜2) from 테이블;
+```
+## 3-8. `TIMESTAMPDIFF`
+- 두 시간의 차이 계산
+- second, minute, day, month, year 지정 가능 
+```sql
+select timestampdiff(day, 날짜1, 날짜2) from 테이블;
 ```
 
 # 4. `NULL FUNCTIONS`
