SQL INSTR 내용 추가

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -8,6 +8,7 @@ INDEX
     6. REPLACE
     7. LPAD/RPAD
     8. FIND_IN_SET
+    9. INSTR
 2. NUMBER FUNCTIONS
     1. ROUND
     2. FLOOR
@@ -85,6 +86,12 @@ select rpad(문자열, 길이, 문자) from 테이블;
 - 문자가 있으면 인덱스, 없으면 0 반환
 ```sql
 select find_in_set('문자', '문자열');
+```
+
+## 1-9. `INSTR`
+- 문자열에서 문자 위치 반환 
+```sql
+select instr('문자열, 문자');
 ```
 
 # 2. `NUMBER FUNCTIONS`
