--- a/Bigdata-cert/type3/01.hypothesis-testing.md
+++ b/Bigdata-cert/type3/01.hypothesis-testing.md
@@ -9,9 +9,9 @@
 ### 귀무가설과 대립가설
 
 - 귀무가설: 기존에 알려진 사실, 효과나 차이가 없음
-    - 퇴근후딴짓 강의 수강생과 타 강의 수강생과 합격률 차이가 없다.
+    - 특별 강의 수강생과 타 강의 수강생과 합격률 차이가 없다.
 - 대립가설: 연구자가 입증 하려는 사실, 효과나 차이가 있음
-    - 퇴근후딴짓 강의 수강생은 타 강의 수강생보다 합격률이 높다
+    - 특별 강의 수강생은 타 강의 수강생보다 합격률이 높다
 
 ### **검정 결과**
 
