--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -36,7 +36,8 @@ INDEX
 
 ## 1-1. `SUBSTRING/SUBSTR`
 - 문자열 슬라이싱시 사용 가능 
-- `substring/substr(text, a, b)` : text의 인덱스a 부터 b 까지 추출 
+- `substring/substr(text, a, b)` : text의 인덱스a 부터 b 까지 추출
+- ***이 때 인덱스는 0이 아닌 1부터 시작***  
 ```sql
 select substring(문자열, a, b) from 테이블;
 
