left, right 내용 추가

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -38,10 +38,18 @@ INDEX
 - 문자열 슬라이싱시 사용 가능 
 - `substring/substr(text, a, b)` : text의 인덱스a 부터 b 까지 추출
 - ***이 때 인덱스는 0이 아닌 1부터 시작***  
+- `MID`와 동의어
+- `LEFT`, `RIGHT` 
+    - `left(문자, a)`: 문자열의 좌측부터 a개 만큼 추출
+    - `right(문자, a)`: 문자열의 우측부터 a개 만큼 추출
 ```sql
 select substring(문자열, a, b) from 테이블;
 
 select substr(문자열, a, b) from 테이블;
+
+select left(문자열, a) from 테이블;
+
+select right(문자열, a) from 테이블;
 ```
 
 ## 1-2. `LENGTH`
