비트 연산자 내용 추가

--- a/SQL/05-Etc3.md
+++ b/SQL/05-Etc3.md
@@ -30,6 +30,7 @@ INDEX
     2. COALESCE
     3. NULLIF
     4. ISNULL
+5. BITWISE OPERATOR
 ---
 # 1. `STRING FUNCTIONS`
 - 문자열 함수 
@@ -228,3 +229,33 @@ select nullif(a, b) from 테이블;
 ```sql
 select isnull(a) from 테이블;
 ``` 
+# 5. `BITWISE OPERATOR`(비트 연산자)
+- 비트(bit) 단위로 논리 연산 수행
+- 비트 하나하나를 비교
+- 전체 비트를 왼쪽, 오른쪽으로 이동시킬 때도 사용
+## 5-1. 비트 연산자 종류
+- `&`
+    - AND 연산
+    - 대응되는 비트가 모두 1이면 1 반환
+- `|` 
+    - OR 연산
+    - 대응되는 비트 중 하나라도 1이면 1 반환
+- `^` 
+    - XOR 연산
+    - 대응되는 비트가 서로 다를 때 1 반환
+- `~` 
+    - NOT 연산
+    - 비트를 반전(1은 0, 0은 1)
+- `<<`, `>>`
+    - SHIFT 연산
+    - `<<`: 비트를 왼쪽으로 이동(left shift)
+    - `>>`: 비트를 오른쪽으로 이동(right shift)
+- 사용예시 
+```sql
+select 
+b'1001' & b'1111', -- b'1001' 
+b'1001' | b'1111', -- b'1111' 
+b'1001' ^ b'1111', -- b'110' 
+b'1110' >> 1 -- b'0111' 
+b'0011' << 2; -- b'1100'
+```
